--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "eslint": "^8.0.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0",
-    "tsx": "^4.0.0"
+    "tsx": "^4.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   }
 }
